<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg"
    tools:context=".view.MainActivity">

    <ImageView
        android:id="@+id/book_imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/book_icon" />

    <TextView
        android:id="@+id/title_textview"
        style="@style/AppTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:text="@string/title_textview"
        app:layout_constraintEnd_toEndOf="@id/book_imageview"
        app:layout_constraintStart_toStartOf="@id/book_imageview"
        app:layout_constraintTop_toBottomOf="@id/book_imageview" />

    <View
        android:id="@+id/top_divider_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_2dp"
        android:background="@color/colorBlack"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:layout_marginBottom="@dimen/dimen_8dp"
        app:layout_constraintTop_toBottomOf="@id/title_textview" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/main_recyclerview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        app:layout_constraintBottom_toTopOf="@id/bottom_divider_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_divider_view" />

    <View
        android:id="@+id/bottom_divider_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_2dp"
        android:background="@color/colorBlack"
        android:layout_marginBottom="@dimen/dimen_8dp"
        android:layout_marginTop="@dimen/dimen_8dp"
        app:layout_constraintBottom_toTopOf="@id/add_guest_button" />

    <Button
        android:id="@+id/add_guest_button"
        style="@style/AppButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="106dp"
        android:layout_margin="@dimen/dimen_16dp"
        android:text="@string/add_guest_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/close_app_button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/close_app_button"
        style="@style/AppButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16dp"
        android:text="@string/close_button"
        app:layout_constraintStart_toEndOf="@id/add_guest_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>